@@ -244,17 +244,22 @@ PlanIter_t XQueryCompiler::compile(
 {
   {
     time::Timer lTimer;
-    audit::DurationAuditor durationAudit(aAuditRecord,
-                                         audit::XQUERY_COMPILATION_TRANSLATION_DURATION,
-                                         lTimer);
+
+    audit::DurationAuditor 
+    durationAudit(aAuditRecord,
+                  audit::XQUERY_COMPILATION_TRANSLATION_DURATION,
+                  lTimer);
 
     rootExpr = normalize(ast); // also does the translation
   }
+
   {
     time::Timer lTimer;
-    audit::DurationAuditor durationAudit(aAuditRecord,
-                                         audit::XQUERY_COMPILATION_OPTIMIZATION_DURATION,
-                                         lTimer);
+
+    audit::DurationAuditor
+    durationAudit(aAuditRecord,
+                  audit::XQUERY_COMPILATION_OPTIMIZATION_DURATION,
+                  lTimer);
 
     rootExpr = optimize(rootExpr);
   }
@@ -266,9 +271,11 @@ PlanIter_t XQueryCompiler::compile(
   PlanIter_t plan;
   {
     time::Timer lTimer;
-    audit::DurationAuditor durationAudit(aAuditRecord,
-                                         audit::XQUERY_COMPILATION_CODEGENERATION_DURATION,
-                                         lTimer);
+
+    audit::DurationAuditor
+    durationAudit(aAuditRecord,
+                  audit::XQUERY_COMPILATION_CODEGENERATION_DURATION,
+                  lTimer);
 
     plan = codegen("main query", rootExpr, theCompilerCB, nextDynamicVarId);
   }
@@ -282,7 +289,21 @@ PlanIter_t XQueryCompiler::compile(
 ********************************************************************************/
 expr_t XQueryCompiler::normalize(parsenode_t aParsenode)
 {
+#if 0
+  time::walltime startTime;
+  time::walltime stopTime;
+  double elapsedTime;
+
+  time::get_current_walltime(startTime);
+#endif
+
   expr_t lExpr = translate(*aParsenode, theCompilerCB);
+
+#if 0
+  time::get_current_walltime(stopTime);
+  elapsedTime = time::get_walltime_elapsed(startTime, stopTime);      
+  std::cout << "Translation time = " << elapsedTime << std::endl;
+#endif
 
   if ( lExpr == NULL )
   {
