@@ -676,6 +676,8 @@ NOARY_ACCEPT(ForVarIterator);
 
 LetVarState::LetVarState()
 {
+  theWindowStart = 0;
+  theWindowEnd = 0;
 }
 
 
@@ -836,6 +838,11 @@ void LetVarIterator::bind(
       state->theTempSeqIter->open();
     }
   }
+  else
+  {
+    state->theWindowStart = startPos - 1;
+    state->theWindowEnd = endPos;
+  }
 }
 
 
@@ -901,6 +908,7 @@ bool LetVarIterator::nextImpl(store::Item_t& result, PlanState& planState) const
   store::Item_t lenItem;
   xs_integer startPos;
   xs_integer len;
+  xs_integer seqSize;
 
   LetVarState* state;
   DEFAULT_STACK_INIT(LetVarState, state, planState);
@@ -919,7 +927,11 @@ bool LetVarIterator::nextImpl(store::Item_t& result, PlanState& planState) const
     if (theTargetLenIter == NULL && theInfLen == false)
     {
       if (startPos > Integer(0))
+      {
+        startPos += state->theWindowStart;
+
         state->theTempSeq->getItem(startPos, result);
+      }
 
       if (result)
         STACK_PUSH(true, state);
@@ -946,17 +958,23 @@ bool LetVarIterator::nextImpl(store::Item_t& result, PlanState& planState) const
         startPos = 1;
       }
 
-      state->theLastPos = startPos + len;
+      seqSize = (state->theWindowEnd > 0 ?
+                 state->theWindowEnd :
+                 state->theTempSeq->getSize());
+
+      startPos += state->theWindowStart;
+
       state->thePos = startPos;
+      state->theLastPos = startPos + len;
+      if (state->theLastPos > seqSize)
+        state->theLastPos = seqSize + 1;
 
       while (state->thePos < state->theLastPos)
       {
         state->theTempSeq->getItem(state->thePos++, result);
 
-        if (result)
-          STACK_PUSH(true, state);
-        else
-          break;
+        assert(result);
+        STACK_PUSH(true, state);
       }
     }
   }
@@ -969,6 +987,7 @@ bool LetVarIterator::nextImpl(store::Item_t& result, PlanState& planState) const
   else if (state->theTempSeqIter)
   {
     assert(state->theSourceIter == NULL);
+
     while (state->theTempSeqIter->next(result))
     {
       STACK_PUSH(true, state);
@@ -977,6 +996,7 @@ bool LetVarIterator::nextImpl(store::Item_t& result, PlanState& planState) const
   else
   {
     assert(state->theSourceIter != NULL && state->theTempSeqIter == NULL);
+
     while (state->theSourceIter->next(result))
     {
       STACK_PUSH(true, state);
