@@ -1,0 +1,2 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<window>1 1 1</window><window>2 2 2</window><window>3 3 3</window>
